--- a/gojek.automation.cleartrip/pom.xml
+++ b/gojek.automation.cleartrip/pom.xml
@@ -14,5 +14,21 @@
   		<artifactId>testng</artifactId>
   		<version>6.10</version>
   	</dependency>
+  	<dependency>
+  		<groupId>com.relevantcodes</groupId>
+  		<artifactId>extentreports</artifactId>
+  		<version>2.41.2</version>
+  	</dependency>
+  	<dependency>
+    <groupId>io.appium</groupId>
+    <artifactId>java-client</artifactId>
+    <version>4.1.2</version>
+</dependency>
+  	
+  	<dependency>
+  		<groupId>org.seleniumhq.selenium</groupId>
+  		<artifactId>selenium-java</artifactId>
+  		<version>3.0.1</version>
+  	</dependency>
   </dependencies>
 </project>
