--- a/gojek.automation.cleartrip/pom.xml
+++ b/gojek.automation.cleartrip/pom.xml
@@ -31,4 +31,13 @@
   		<version>3.0.1</version>
   	</dependency>
   </dependencies>
+  <build>
+  	<plugins>
+  		<plugin>
+  			<groupId>org.apache.maven.plugins</groupId>
+  			<artifactId>maven-surefire-plugin</artifactId>
+  			<version>2.19.1</version>
+  		</plugin>
+  	</plugins>
+  </build>
 </project>
